# bangumi-seasonal-rank-updater

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  alembic.ini  compose.yml  main.py  migrate_sqlite_to_postgres.py  pyproject.toml  quarter_counts.json
alembic/: env.py
alembic/versions/: 17b4121da2e2_init.py  6955d3938c08_init.py
app/: config.py  count_by_quarter.py  dependencies.py  ds_client.py  fetch_anilist.py  fetch_top_posters.py  main.py  mapping.py  utils.py
app/anilist/: client.py  graphql.http
app/api/v0/: health.py  index.py  routers.py  subject.py  utils.py  yucwiki.py
app/api/v0/available_seasons/: endpoints.py
app/api/v0/season/: endpoints.py  models.py
app/api/v0/update/: data.py  endpoints.py  models.py
app/bgmtv/: api.py
app/services/: __init__.py
app/services/bgmtv/: __init__.py  api.py  client.py  models.py
app/services/db/: __init__.py  client.py  schemas.py  session.py
app/services/ds/: client.py
app/services/redis_client/: __init__.py  client.py
app/services/youranimestw/: __init__.py  api.py
app/services/yucwiki/: __init__.py  api.py
app/utils/: __init__.py  season.py
data/: 200104.json  200301.json  200304.json  200307.json  200310.json  200401.json  200407.json  200410.json  200501.json  200504.json  200507.json  200510.json  200604.json  200607.json  200704.json  200804.json  200807.json  200910.json  201001.json  201110.json  201201.json  202510.json
done/: 200004.json  200007.json  200010.json  200101.json  200107.json  200110.json  200201.json  200204.json  200207.json  200210.json  200404.json  200601.json  200610.json  200701.json  200707.json  200710.json  200801.json  200810.json  200901.json  200904.json  200907.json  201004.json  201007.json  201010.json  201101.json  201104.json  201107.json
mappings/: posters_by_season.json  season_to_index.py
migrations/: 20251223075522_create_initial_tables.down.sql  20251223075522_create_initial_tables.sql  20251225070515_update_subjects_numeric_to_float.down.sql  20251225070515_update_subjects_numeric_to_float.up.sql  20251225090053_delete_season_subjects_display_order.down.sql  20251225090053_delete_season_subjects_display_order.up.sql
migrations/2025-05-13-init/: down.sql  up.sql
src/: api.rs  db.rs  main.rs
src/api/: mod.rs
src/bgm/: api.rs  mod.rs  models.rs
src/dal/: mod.rs
src/dal/dto/: mod.rs  season.rs  season_subject.rs
src/dal/repositories/: mod.rs  season_repository.rs  season_subject_repository.rs  subject_repository.rs
src/db/: mod.rs  models.rs  schema.rs
src/models/: season_subject.rs  subject.rs
src/repositories/: mod.rs  season_repository.rs  season_subject_repository.rs  subject_repository.rs
src/scrapying/: mod.rs
src/scrapying/youranimes_tw/: mod.rs
src/services/: mod.rs
src/services/bangumi/: client.rs  mod.rs  schemas.rs
src/services/bangumi/api/: episode.rs  index.rs  mod.rs  subject.rs
