[package]
name = "bangumi-seasonal-rank-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
redis = { version = "0.31.0", features = ["tokio-comp"] }
anyhow = "1.0.98"
