[package]
name = "bgm-rank-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
