[project]
name = "bangumi-seasonal-rank-updater"
version = "0.1.0"
description = "Bangumi Seasonal Rank Updater"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.14",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "returns>=0.25.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.16.2",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "returns[compatible-mypy]>=0.25.0",
    "ruff>=0.12.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["data/*"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
strict = true
show_error_codes = true

# 确保检查泛型和重载
disallow_any_generics = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
